[package]
name = "grafferous"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Jackson Henry"]
description = "A rusty graph library with a focus on generic data in nodes"
repository = "https://github.com/jacksonhenry3/Grafferous"
homepage = "https://github.com/jacksonhenry3/Grafferous"
documentation = "https://docs.rs/grafferous"
readme = "README.md"
keywords = ["graph", "nodes", "edges",  "graphs", "networks"]
categories = ["data-structures", "algorithms", "graphs", "networks"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false


